--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<div id="app"></div>
+	<div class="app" id="app"></div>
 
 
 <!-- The core React library -->
 <script src="vendor/react.js"></script>
 <!-- The ReactDOM Library -->
 <script src="vendor/react-dom.js"></script>
- <script src="vendor/browser.min.js"></script>
+<script src="vendor/browser.min.js"></script>
+
+<script src="vendor/prism.js"></script>
 <script type="text/babel" src="code.js"></script>
 
 
