--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <script src="vendor/browser.min.js"></script>
 
 <script src="vendor/prism.js"></script>
+<script src="vendor/lodash.min.js"></script>
 <script type="text/babel" src="code.js"></script>
 
 
