tabs for each gist files

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <!-- The ReactDOM Library -->
 <script src="vendor/react-dom.js"></script>
 <script src="vendor/browser.min.js"></script>
+<script src="vendor/react-intl.min.js"></script>
 
 <script src="vendor/prism.js"></script>
 <script src="vendor/lodash.min.js"></script>
